# avgd

./: CMakeLists.txt  avgd.cc
